# Simple

./: .gitignore  CMakeLists.txt  Simple.rc  main.cpp  main.qml  package.xml
cmake/: Dependencies.cmake
res/: qml.qrc
res/base/: Activity.qml  Application.qml  Fragment.qml
res/global/: Color.qml  qmldir
res/layout/: ActivityMain.qml  ActivityMessage.qml  FragmentHome.qml  FragmentLogin.qml  FragmentMain.qml  FragmentTool.qml
res/view/: ButtonClose.qml  ButtonMaximize.qml  ButtonMinimize.qml  CusButton.qml  CusTitleBar.qml  ThreeButtons.qml  Toast.qml  ToastManager.qml  WindowBorder.qml
src/: CMakeLists.txt  main.cpp
src/application/: Application.cpp
src/home/: HomeController.cpp
src/include/application/: Application.h
src/include/home/: HomeController.h
src/include/login/: LoginController.h
src/include/tool/: ToolController.h
src/login/: LoginController.cpp
src/tool/: ToolController.cpp
