cmake_minimum_required(VERSION 3.12)
project(Simple VERSION 1.0.0 LANGUAGES CXX)
add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")

set(QT_VERSION 5)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

set(REQUIRED_LIBS Core Gui Qml Quick QuickControls2)
set(REQUIRED_LIBS_QUALIFIED Qt5::Core Qt5::Gui Qt5::Qml Qt5::Quick Qt5::QuickControls2)

message("当前的构建类型是：${CMAKE_BUILD_TYPE}")
if (WIN32)
    message("当前是：WIN32系统")
    include_directories(third_party/glog/include/win32)
    if (${CMAKE_BUILD_TYPE} MATCHES Debug)
        link_directories(third_party/glog/libs/win32/Debug)
    else ()
        link_directories(third_party/glog/libs/win32/Release)
    endif ()
    link_libraries(glog)
elseif (APPLE)
    message("当前是：APPLE系统")
    include_directories(third_party/glog/include/mac)
    link_directories(third_party/glog/libs/mac)
    link_libraries(glog)
else (UNIX)
    message("当前是：UNIX系统")
endif ()

include_directories(library/include)
add_subdirectory(library)
include_directories(src/include)
add_subdirectory(src)

find_package(Qt${QT_VERSION} COMPONENTS ${REQUIRED_LIBS} REQUIRED)
add_executable(${PROJECT_NAME} src/main.cpp res/qml.qrc)
target_link_libraries(${PROJECT_NAME} ${REQUIRED_LIBS_QUALIFIED} Library Source glog)
