file(GLOB ENTITY "entity/*.cpp" "include/entity/*.h")
file(GLOB LOGIN "login/*.cpp" "include/login/*.h")
file(GLOB HOME "home/*.cpp" "include/home/*.h")
file(GLOB TOOL "tool/*.cpp" "include/tool/*.h")
file(GLOB APPLICATION "application/*.cpp" "include/application/*.h")
add_library(Source ${ENTITY} ${LOGIN} ${HOME} ${TOOL} ${APPLICATION})
find_package(Qt${QT_VERSION} COMPONENTS ${REQUIRED_LIBS} REQUIRED)
target_link_libraries(Source ${REQUIRED_LIBS_QUALIFIED})